tdf#155376 weakly cache ScAccessibleCell

the macOS accessibility framework repeatedly queries and enumerates
all of the visible cells.
Every time this happens we create a new set of ScAccessibleCell,
which then live until the application shuts down, which then
causes a very slow shutdown.

So I fix the problem by caching the ScAccessibleCell so we return
the same one for a given cell position.

Of course, this begs the question of why the ScAccessibleCell
objects are not dying when we create new ones, which means we have
some kind of leak or lifecycle problem somewhere, but anyhow,
this is a fairly simple and comprehensive fix.

Change-Id: Id2765236ac4524f490a51b56268fb8038612fd43
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152932
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@neooffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit f22cb3dfab413a2917cd810b8e1b8f644a016327)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153025